--- a/index.html
+++ b/index.html
@@ -64,28 +64,29 @@
 </head>
 <body>
 
-<!-- Social Bar -->
-<script type='text/javascript' src='//www.profitableratecpm.com/a/6e980c246cebf6a0c0055c87de205995'></script>
+  <!-- Social Bar -->
+  <script type="text/javascript" src="//www.profitableratecpm.com/a/6e980c246cebf6a0c0055c87de205995"></script>
 
-<div class="container">
-  <img src="https://i.imgur.com/s2YUJOY.jpeg" alt="Amelia" class="thumbnail" />
+  <div class="container">
+    <!-- Gambar Landing Page -->
+    <img src="https://i.imgur.com/s2YUJOY.jpeg" alt="Amelia" class="thumbnail" />
 
-  <!-- Tombol pindah ke atas -->
-  <a class="cta-button" href="https://www.profitableratecpm.com/uixse2d8v3?key=23a055bb47bd567cc9257c82b9b30856" target="_blank">
-    💋 Continue to WhatsApp 💋
-  </a>
+    <!-- Tombol ke WhatsApp -->
+    <a class="cta-button" href="https://www.profitableratecpm.com/uixse2d8v3?key=23a055bb47bd567cc9257c82b9b30856" target="_blank">
+      ✅ Continue to WhatsApp ✅
+    </a>
 
-  <h1>Hi, I'm Amelia 💕</h1>
-  <p>
-    Hey there! I'm Amelia, a fun-loving and single girl who's looking for a special someone to spend time with.  
-    I enjoy deep conversations, late-night video calls, and making new friends.  
-    If you're kind and a little adventurous, I’d love to get to know you. Let’s chat now 💋
-  </p>
+    <h1>Hi, I'm Amelia 💕</h1>
+    <p>
+      Hey there! I'm Amelia, a fun-loving and single girl who's looking for a special someone to spend time with.  
+      I enjoy deep conversations, late-night video calls, and making new friends.  
+      If you're kind and a little adventurous, I’d love to get to know you. Let’s chat now 💋
+    </p>
 
-  <!-- Native Banner -->
-  <div id="container-7e63f56aba5db2dffb4773369cf25bb3"></div>
-  <script async="async" data-cfasync="false" src="//pl27079921.profitableratecpm.com/7e63f56aba5db2dffb4773369cf25bb3/invoke.js"></script>
-</div>
+    <!-- Native Banner -->
+    <div id="container-7e63f56aba5db2dffb4773369cf25bb3"></div>
+    <script async data-cfasync="false" src="//pl27079921.profitableratecpm.com/7e63f56aba5db2dffb4773369cf25bb3/invoke.js"></script>
+  </div>
 
 </body>
 </html>
