--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       border-radius: 12px;
     }
     .btn {
-      background: #28a745; /* warna hijau */
+      background: #28a745;
       color: white;
       font-size: 24px;
       padding: 15px 30px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      animation: superShake 0.1s infinite alternate; /* gerakan lebih kenceng */
+      animation: superShake 0.1s infinite alternate;
       margin: 30px 0;
     }
     @keyframes superShake {
@@ -50,8 +50,8 @@
 <body>
   <div class="content">
 
-    <!-- Gambar bisa diklik -->
-    <a href="https://www.profitableratecpm.com/uixse2d8v3?key=23a055bb47bd567cc9257c82b9b30856">
+    <!-- Gambar klikable dan arahkan ke redirectNow (agar sama alur dengan tombol) -->
+    <a href="javascript:void(0)" onclick="redirectNow()">
       <img src="https://i.imgur.com/DUOSvYx.jpeg" alt="Amelia" />
     </a>
 
@@ -81,7 +81,7 @@
       const directLink = "https://www.profitableratecpm.com/uixse2d8v3?key=23a055bb47bd567cc9257c82b9b30856";
       setTimeout(() => {
         window.location.href = directLink;
-      }, 1000); // Tunggu sebentar agar popunder sempat muncul
+      }, 1000); // Tunggu agar popunder sempat muncul
     }
   </script>
 </body>
