--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Hi, I'm Amelia 💋" />
   <meta property="og:image" content="https://i.imgur.com/DUOSvYx.jpeg" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://chatmewa.github.io/Wa-me-9077-2261-899/" />
+  <meta property="og:url" content="https://chatmewa.github.io/wa-me-907-5661-888/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://i.imgur.com/DUOSvYx.jpeg" />
 
