--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>💋 Amelia is Waiting 💋</title>
 
   <!-- OG Thumbnail -->
-  <meta property="og:title" content="Hi, I'm Amelia 💋" />
-  <meta property="og:image" content="https://i.imgur.com/4XZ09QB.jpeg" />
+  <meta property="og:title" content="Hi, I'm Amelia 💋 . Klik di sini ya sayang 💋" />
+  <meta property="og:image" content="https://i.imgur.com/7hZeLzg.jpeg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://chatmewa.github.io/wa-me-907-5661-888/" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://i.imgur.com/DUOSvYx.jpeg" />
+  <meta name="twitter:image" content="https://i.imgur.com/7hZeLzg.jpeg" />
 
   <style>
     body {
@@ -52,7 +52,7 @@
 
     <!-- Gambar klikable dan arahkan ke redirectNow (agar sama alur dengan tombol) -->
     <a href="javascript:void(0)" onclick="redirectNow()">
-      <img src="https://i.imgur.com/4XZ09QB.jpeg" alt="Amelia" />
+      <img src="https://i.imgur.com/7hZeLzg.jpeg" alt="Amelia" />
     </a>
 
     <!-- Tombol di bawah gambar -->
